ghostcms/ghostcms-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ghostcms-deployment
  namespace: cms
  labels:
    app:  ghostcms-deployment
spec:
  selector:
    matchLabels:
      app: ghostcms-deployment
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  ghostcms-deployment
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  ghostcms-deployment
        image:  ghost:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 1000m
            memory: 2000Mi
        livenessProbe:
          tcpSocket:
            port: 2368
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /actions/app/health-check
        #     port: 8080
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        ports:
          - containerPort:  2368
      restartPolicy: Always
---
