ghostcms/ghostcms-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: ghostcms-service
  namespace: cms
spec:
  selector:
    app: ghostcms-deployment
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
---
